--- a/index.html
+++ b/index.html
@@ -17,7 +17,9 @@
     <!-- Custom CSS -->
     <link href="css/style.css" rel="stylesheet">
 
+    <!-- Youtube/Image Gallery -->
     <link href="css/jquery.bxslider.css" rel="stylesheet" />
+    <link  href="https://unpkg.com/nanogallery2@2.4.2/dist/css/nanogallery2.min.css" rel="stylesheet" type="text/css">
 
     <!-- Custom Fonts -->
     <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css">
@@ -130,20 +132,9 @@
         <div class="row">
             <div class="col-lg-8 col-lg-offset-2">
                 <h2>Some of our work </h2>
-                <ul class="bxslider">
-                  <li>
-                    <iframe width="420" height="315" src="https://www.youtube.com/embed/SieicD2ra_U?controls=0&showinfo=0" frameborder="0" webkitAllowFullScreen mozallowfullscreen allowFullScreen></iframe>
-                  </li>
+                <div id="gallery-body">
 
-                  <li>
-                    <iframe width="420" height="315" src="https://www.youtube.com/embed/ChV3ke5f0Ao?controls=0&showinfo=0" frameborder="0" webkitAllowFullScreen mozallowfullscreen allowFullScreen></iframe>
-                  </li>
-                 
-                  <li>
-                    <iframe width="420" height="315" src="https://www.youtube.com/embed/pQR5-n57eeo?controls=0&showinfo=0" frameborder="0" webkitAllowFullScreen mozallowfullscreen allowFullScreen></iframe>
-                  </li>
-
-                </ul>
+                </div>
             </div>
         </div>
     </section>
@@ -226,24 +217,42 @@
     <script src="js/jquery.easing.min.js"></script>
 
     <!-- Youtube Gallery -->
-    <script src="js/jquery.fitvids.js"></script>
+    <script  type="text/javascript" src="https://unpkg.com/nanogallery2@2.4.2/dist/jquery.nanogallery2.min.js"></script>
     <script src="js/jquery.bxslider.min.js"></script>
 
     <!-- Google Maps API Key - Use your own API key to enable the map feature. More information on the Google Maps API can be found at https://developers.google.com/maps/ -->
-    <script type="text/javascript" src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCRngKslUGJTlibkQ3FkfTxj3Xss1UlZDA&sensor=false"></script>
+    <script type="text/javascript" src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBLc5aVdmawf_79xyCRa06gget0WLEn-w4&sensor=false"></script>
 
     <!-- Custom Theme JavaScript -->
     <script src="js/animations.js"></script>
 
     <script>
-  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-  })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+        $(document).ready(function() {
+            (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+            (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+            m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+            })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
 
-  ga('create', 'UA-65614576-1', 'auto');
-  ga('send', 'pageview');
+            ga('create', 'UA-65614576-1', 'auto');
+            ga('send', 'pageview');
 
+            $("#gallery-body").nanogallery2( {
+                thumbnailHeight:  150,
+                thumbnailWidth:   150,
+                thumbnailLabel: {
+                 titleMultiLine: true
+                },
+                items: [
+                    { src: 'img/gallery/truck03.png', srct: 'img/gallery/truck03.png', title: 'Service Truck #03' },
+                    { src: 'img/gallery/truck05.png', srct: 'img/gallery/truck05.png', title: 'Service Truck #05' },
+                    { src: 'img/gallery/truck17.png', srct: 'img/gallery/truck17.png', title: 'Service Truck #17' },
+                    { src: 'https://youtu.be/SieicD2ra_U', title: 'Truck not Starting' },
+                    { src: 'https://youtu.be/ab1QS0yTu7Q', title: 'Jump Start 24 Volts System' },
+                    { src: 'https://youtu.be/sAEorC3P5G8', title: 'Diagnosing Bad Starter #2' },
+                    { src: 'https://youtu.be/ChV3ke5f0Ao', title: 'Broken Belt' },
+                    ]
+            });
+        })
     </script>
 
 </body>
