--- a/index.html
+++ b/index.html
@@ -243,9 +243,9 @@
                  titleMultiLine: true
                 },
                 items: [
-                    { src: 'img/gallery/truck03.png', srct: 'img/gallery/truck03.png', title: 'Service Truck #03' },
-                    { src: 'img/gallery/truck05.png', srct: 'img/gallery/truck05.png', title: 'Service Truck #05' },
-                    { src: 'img/gallery/truck17.png', srct: 'img/gallery/truck17.png', title: 'Service Truck #17' },
+                    { src: 'img/gallery/truck03.jpg', srct: 'img/gallery/truck03.jpg', title: 'Service Truck #03' },
+                    { src: 'img/gallery/truck05.jpg', srct: 'img/gallery/truck05.jpg', title: 'Service Truck #05' },
+                    { src: 'img/gallery/truck17.jpg', srct: 'img/gallery/truck17.jpg', title: 'Service Truck #17' },
                     { src: 'https://youtu.be/SieicD2ra_U', title: 'Truck not Starting' },
                     { src: 'https://youtu.be/ab1QS0yTu7Q', title: 'Jump Start 24 Volts System' },
                     { src: 'https://youtu.be/sAEorC3P5G8', title: 'Diagnosing Bad Starter #2' },
